--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "json-server-vercel",
+  "name": "nghexanh",
   "version": "1.0.0",
   "description": "A simple JSON Server setup",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node api/index.js",
+    "vercel-build": "vercel dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
