--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nghexanh",
   "version": "1.0.0",
   "description": "A simple JSON Server setup",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
     "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
