--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
     {
       "src": "JS/**/*",
       "use": "@vercel/static"
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
