--- a/vercel.json
+++ b/vercel.json
@@ -26,7 +26,7 @@
       "use": "@vercel/static"
     },
     {
-      "src": "JS/*",
+      "src": "JS/script.js",
       "use": "@vercel/static"
     },
     {
