--- a/vercel.json
+++ b/vercel.json
@@ -37,11 +37,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "api/index.js"
     }
   ]
 }
