--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,10 @@
     {
       "src": "/api/(.*)",
       "dest": "api/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
