--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
     "express": "^4.19.2",
     "json-server": "^0.17.4"
   }
