--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "cors-anywhere": "^0.4.4",
     "express": "^4.19.2",
+    "firebase": "^10.12.5",
+    "firebase-admin": "^12.3.1",
     "json-server": "^0.17.4"
   }
 }
